Fix project card user name overflow style issue

--- a/app/assets/stylesheets/catarse_bootstrap/_extra.sass
+++ b/app/assets/stylesheets/catarse_bootstrap/_extra.sass
@@ -37,7 +37,9 @@ body
 .loader
   img
     display: none
-    
+.card-author-name
+  max-height: 3.5em
+  overflow: hidden
 .card-gone
   color: inherit
   display: block
